--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!--
       Notice the use of  in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
